move the first star with 2horizontal-r out of container for fix the layout responsiveness

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,7 +185,7 @@
         i 
         {
             border: 1px solid var(--lightest);
-            border-radius: 50%;
+            /* border-radius: 50%; */
         }
     }
 
